should fix word alignment on farm section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1056,7 +1056,7 @@ section a,
   }
 
   section.farm .image-1 {
-    margin-bottom: 5rem;
+    margin-bottom: 9rem;
   }
 
   .cellar {
